--- a/frontend/src/app/pages/landing/landing.html
+++ b/frontend/src/app/pages/landing/landing.html
@@ -1,23 +1,15 @@
-<!-- Angular Material Loader Overlay -->
-<div class="loading-overlay" *ngIf="loading">
-  <mat-progress-spinner mode="indeterminate" diameter="70" strokeWidth="6" color="primary">
-  </mat-progress-spinner>
-
-  <p class="loading-text">{{ loadingText }}</p>
-</div>
-
 <header class="nav">
   <div class="nav-inner">
     <div class="brand">
-      <img src="assets/logo-white.png" alt="logo" class="logo" />
-      <span class="brand-name">Interview Portal</span>
+      <img src="" alt="logo" class="logo" />
+      <span class="brand-name">CampIt</span>
     </div>
 
-    <nav class="nav-links">
+    <!-- <nav class="nav-links">
       <a routerLink="/">Home</a>
       <a routerLink="/about">About</a>
       <a routerLink="/docs">Docs</a>
-    </nav>
+    </nav> -->
 
     <div class="nav-actions">
       <!-- use the component method instead of accessing router directly -->
