--- a/frontend/src/app/pages/admin/admin-candidates/admin-candidates.css
+++ b/frontend/src/app/pages/admin/admin-candidates/admin-candidates.css
@@ -92,6 +92,7 @@ h2 {
 .candidate-card {
   background: #ffffff;
   padding: 15px;
+    max-width: 350px; 
   border-radius: 12px;
   box-shadow: 0 3px 10px rgba(0,0,0,0.1);
   transition: transform 0.2s;
