--- a/frontend/src/app/pages/admin/dashboard/dashboard.html
+++ b/frontend/src/app/pages/admin/dashboard/dashboard.html
@@ -4,25 +4,24 @@
     <h2 class="logo">Admin Panel</h2>
 
     <nav class="menu">
-      <a routerLink="create-interviewer" routerLinkActive="active-link">🧑‍💼 Create Interviewer</a>
-      <a routerLink="create-candidate" routerLinkActive="active-link">👩‍🎓 Create Candidate</a>
-      <a routerLink="admin-candidates" routerLinkActive="active-link">👥 All Candidates</a>
-      <a routerLink="admin-interviewers" routerLinkActive="active-link">👔 All Interviewers</a>
-      <a routerLink="assign-interview" routerLinkActive="active-link">🧩 Assign Interview</a>
-      <a routerLink="view-assignments" routerLinkActive="active-link">📋 View Assignments</a>
-      <a routerLink="view-reports" routerLinkActive="active-link">📋 Reports</a>
-      <a routerLink="offer-letter" routerLinkActive="active-link">📄 Offer Letter</a>
+      <a routerLink="create-interviewer" routerLinkActive="active-link"> Create Interviewer</a>
+      <a routerLink="create-candidate" routerLinkActive="active-link"> Create Candidate</a>
+      <a routerLink="admin-candidates" routerLinkActive="active-link"> All Candidates</a>
+      <a routerLink="assign-interview" routerLinkActive="active-link"> Assign Interview</a>
+      <a routerLink="view-assignments" routerLinkActive="active-link"> View Assignments</a>
+      <a routerLink="view-reports" routerLinkActive="active-link">Reports</a>
+      <a routerLink="offer-letter" routerLinkActive="active-link"> Offer Letter</a>
     </nav>
 
     <div class="logout-section">
-      <button class="logout-btn" (click)="logout()">🚪 Logout</button>
+      <button class="logout-btn" (click)="logout()">Logout</button>
     </div>
   </aside>
 
   <!-- Main Content Area -->
   <main class="main-content">
     <header class="topbar">
-      <h1>Welcome, Admin 👋</h1>
+      <h1>Welcome, Admin </h1>
     </header>
 
     <section class="content-area">
