edge case clear - Anto

--- a/frontend/src/app/pages/admin/dashboard/dashboard.html
+++ b/frontend/src/app/pages/admin/dashboard/dashboard.html
@@ -7,6 +7,7 @@
       <a routerLink="create-interviewer" routerLinkActive="active-link"> Create Interviewer</a>
       <a routerLink="create-candidate" routerLinkActive="active-link"> Create Candidate</a>
       <a routerLink="admin-candidates" routerLinkActive="active-link"> All Candidates</a>
+      <a routerLink="admin-interviewers" routerLinkActive="active-link"> All Interviewers</a>
       <a routerLink="assign-interview" routerLinkActive="active-link"> Assign Interview</a>
       <a routerLink="view-assignments" routerLinkActive="active-link"> View Assignments</a>
       <a routerLink="view-reports" routerLinkActive="active-link">Reports</a>
